--- a/src/server/templates/public/process.html
+++ b/src/server/templates/public/process.html
@@ -36,7 +36,7 @@
     if (xhr.readyState == XMLHttpRequest.DONE) {
       clearInterval(timer);
       latest.textContent = 'Video Processing Done!';
-      window.location.replace("/search");
+      window.location.replace("/search-page");
     } else {
       latest.textContent = 'Processing...';
     }
