--- a/src/server/templates/public/upload_video.html
+++ b/src/server/templates/public/upload_video.html
@@ -86,7 +86,7 @@
 
           <div id="alert_wrapper"></div>
 
-          <a href="/yield">split</a>
+          <a href="/search-page">Search Page</a>
         </div>
       </div>
     </div>
