--- a/src/server/templates/public/search-page.html
+++ b/src/server/templates/public/search-page.html
@@ -1,1 +1,9 @@
-<h1>searc page hit</h1>
+<html>
+  <body>
+    <form action="search" method="post">
+      <p>Enter Name:</p>
+      <p><input type="text" name="search_query" /></p>
+      <p><input type="submit" value="submit" /></p>
+    </form>
+  </body>
+</html>
