--- a/src/server/templates/public/search-page.html
+++ b/src/server/templates/public/search-page.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
   <body>
     <form action="search" method="post">
       <p>Enter Name:</p>
@@ -6,4 +6,56 @@
       <p><input type="submit" value="submit" /></p>
     </form>
   </body>
+</html> -->
+
+<html>
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="static/bootstrap.css" />
+  <link rel="stylesheet" href="static/styles.css" />
+</head>
+
+<body>
+  <div class="title-wrapper">
+    <!-- <h1 class="hidden">
+      U<span>.</span>V<span>.</span>S<span>.</span>E<span>.</span>
+    </h1>
+    <h2 class="hidden">Unaided Video Search Engine</h2> -->
+    <!-- <a class="butn butn-default" href="/activity" role="button"
+        >Start Today's Session!</a
+      > -->
+    <div class="container" style="
+    position: relative;
+    top: 25%;
+">
+      <div class="row">
+        <div class="col">
+          <div class="">
+            <section class="webdesigntuts-workshop">
+              <form action="search" method="post">
+                <input type="search" name="search_query" placeholder="What are you looking for?">
+                <button>Search</button>
+              </form>
+            </section>
+            <!-- <form action="search" method="post">
+              <p>Enter Name:</p>
+              <p><input type="text" name="search_query" /></p>
+              <p><input type="submit" value="submit" /></p>
+            </form> -->
+
+          <!-- <a href="/search-page">Search Page</a> -->
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="static/jquery.min.js"></script>
+  <script src="static/bootstrap.js"></script>
+  <script src="static/scripts.js"></script>
+  <script src="static/simplex-noise.min.js"></script>
+  <script src="static/custom.js"></script>
+</body>
+
 </html>
